--- a/backend/package.json
+++ b/backend/package.json
@@ -5,7 +5,7 @@
         "date-fns": "^3.6.0",
         "dotenv": "^16.4.5",
         "express": "^4.19.2",
-        "mongoose": "^8.5.3"
+        "mongoose": "^8.5.3",
         "jsonwebtoken": "^9.0.2",
     },
     "devDependencies": {
